styles.css
/* Flex container for the vertically arranging page */
.container {
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   padding: 2em 0;
   overflow: auto;
}
/* take up the whole page */
html, body {
   height: 100%;
   margin: 0;
   padding: 0;
   overflow-y: auto;
}
/* monospace text */
body {
   font-family: monospace;
}
/* Dark mode styling */
html.dark-mode {
   background-color: #121212;
   color: #e0e0e0;
 }
/* Remove link coloring and underlining */
a {
   color: inherit;
   text-decoration: none;
}
 /* Prevents text from breaking into a new line */
.no-wrap {
   white-space: nowrap;
}

/* Wraps the side images and content */
.content-wrap {
   display: flex;
   justify-content: center;
   align-items: center;
   max-width: 800px;
   width: 100%;
   flex: 1;
}

/* images */
.side-image {
   height: 600px;
   object-fit: contain;
}
.navigation-image {
   width: 36px;
   position: fixed;
	top: 45%;
}
.bottom-image {
   height: 128px;
   object-fit: contain;
   display: block;
   margin: 2em 2em 2em 2em;
}
.tall-bottom-image {
   height: 180px;
   object-fit: contain;
   display: block;
   margin: 2em 2em 2em 2em;
}

/* bookshelf */
.bookshelf {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2em;
   margin: 2em auto;
   flex-wrap: nowrap;
}
.book {
   width: 75px;
   cursor: pointer;
   opacity: 0.6;
   border-radius: 0.5em; 
}
.book.main {
   width: 150px;
   opacity: 1;
   cursor: default;
   border-radius: 1em;
}
.book-wrapper {
  text-align: center;
}
.book-wrapper img {
  margin-top: 1em;
  margin-bottom: 2em;
}
.book-title {
  font-weight: bold;
  font-size: 1.5em;
}
.book-author {
  font-size: 1.2em;
  color: #555;
}
.book-description {
  margin-top: 0.5em;
  font-size: 1.1em;
  color: #444;
  max-width: 200px;
  margin-left: auto;
  margin-right: auto;
}
@media (pointer: coarse) {
   .bookshelf {
      gap: 6em;
   }
   .book {
      width: 45px;
      border-radius: 0.1em; 
   }
   .book.main {
      width: 125px;
      border-radius: .25em;
   }
}

/* Header styling */
header {
   text-align: center;
}
header hr {
   border: 0;
   height: 3px;
   background: #333;
   width: 90%;
   margin: 0 auto 1em; 
}
header h2 {
   display: inline;
   color: #555;
}
.inline-header {
   display: inline;
   font-size: 1.2em;
   font-weight: bold;
   color: #555;
}

/* Footer styling */
footer {
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
   align-items: center;
   text-align: center;
   padding: 3em;
}
.social-icons {
   display: flex;
   justify-content: center;
   gap: 10px;
}
.social-icon {
   width: 32px;
   height: 32px;
}
.ancillary-container {
   margin-top: 6px;
   margin-bottom: 6px;
   display: flex; 
   justify-content: center;
   gap: 10px;
}
.footer-icon {
   width: 32px;
   height: 32px;
}
.toggle-img {
   width: 32px;
   height: 32px;
}

/* contact form */
.contact-form {
   max-width: 600px;
}
.form-row {
   display: flex;
   align-items: center;
   margin-bottom: 1em;
}
.form-row label {
   flex: 1;
   text-align: right;
   margin-right: 1em;
}
.form-row input,
.form-row textarea {
   flex: 2;
   padding: 0.5em;
   border-radius: 0.5em;
}
#contact-form button {
   display: block;
   margin: 2em auto;
   padding: 0.5em 2em;
   border-radius: 0.5em;
   font-family: monospace;
   font-size: 1em;
}
.contact-form input,
.contact-form textarea {
   background-color: #f0f0f0;
   width: 100%;
   max-width: 500px;
   box-sizing: border-box;
   padding: 0.5em;
   margin-top: 0.5em;
}

/* desktop styling */
@media (pointer: fine) {
   .content {
      flex: 1;
      display: flex;
      flex-direction: column;
      justify-content: center;
      text-align: center;
   }

   .poem {
      flex: 1;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      text-align: left;
   }
}

/* mobile styling */
@media (pointer: coarse) {
   header {
      font-size: 2em;
   }
   header hr {
      height: 6px;
   }
   img, .social-icon, .footer-icon, .toggle-img {
      transform: scale(3);
   }
   footer {
      flex-wrap: wrap;
      margin-top: 2em;
      gap: 80px;
      padding: 6em;
   }
   .social-icons {
      gap: 90px;
   }
   .social-icons a {
      display: inline-block;
   }
   .ancillary-container  {
      gap: 90px; 
   }
   .content-wrap {
      flex-direction: row;
      align-items: center;
      margin: auto;
   }
   .side-image {
      height: 350px;
   }
   .bottom-image {
      margin: 4em 2em 6em 2em;
   }
   .navigation-image {
      width: 20px;
   }
   .tall-bottom-image {
      margin: 5em 2em 10em 2em;
   }
   .contact-form {
      font-size: 2.6em;
   }
   .form-row input,
   .form-row textarea {
      font-size: 1em;
   }
   .status-message {
      font-size: 2.6em;
      margin: 2em 1em 4em 1em;
   }

   .content {
      flex: 1;
      display: flex;
      flex-direction: column;
      justify-content: center;
      text-align: center;
      font-size: 2.5em;
      margin: 3em auto 3em auto;
   }

   .poem {
      font-size: 2em;
      line-height: 1.2;
      width: 90%;
      max-width: 700px; 
      text-align: left;
      margin: 3em 2em 4em 4em;
   }
}

